# screenshot_logger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __main__.py  img_export.py  pyproject.toml  screenshot_logger.py  vars.py
